Update backend and frontend files